--- a/package.json
+++ b/package.json
@@ -44,11 +44,14 @@
     "@typescript-eslint/eslint-plugin": "~4.31.1",
     "@typescript-eslint/parser": "~4.31.1",
     "cypress": "^8.3.0",
+    "electron": "^17.0.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "exitzero": "^1.0.1",
     "jest": "27.2.3",
     "jest-preset-angular": "10.0.1",
+    "nx-electron": "^12.1.0",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5"
