--- a/angular.json
+++ b/angular.json
@@ -99,9 +99,11 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "apps/ng-mailer/src/favicon.ico",
-              "apps/ng-mailer/src/assets"
+              "apps/ng-mailer/src/assets",
+              { "glob": "**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco-editor" }
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "apps/ng-mailer/src/styles.scss"
             ],
             "scripts": []
