--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.2.0",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "^12.2.0",
     "@angular/compiler": "^12.2.0",
     "@angular/core": "^12.2.0",
     "@angular/forms": "^12.2.0",
+    "@angular/material": "^12.2.13",
     "@angular/platform-browser": "^12.2.0",
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
     "@nrwl/angular": "12.10.1",
+    "@types/nodemailer": "^6.4.4",
+    "monaco-editor": "^0.24.0",
+    "ngx-monaco-editor": "^12.0.0",
+    "nodemailer": "^6.7.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
